Fix messages animation on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -195,7 +195,7 @@
   text-align: center;
   max-width: max-content;
   margin: auto;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   cursor: pointer;
   position: relative;
   animation: appear 0.5s ease-in-out;
